[EFL] Web Intents code is not compiling https://bugs.webkit.org/show_bug.cgi?id=85364

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-05-18
Reviewed by Adam Barth.

.:

Remove broken CMake directive for WEB_INTENTS.

* Source/cmake/OptionsEfl.cmake:

Source/WebCore:

Add missing implementation for
JSIntentConstructor::constructJSIntent() in JS bindings.

* CMakeLists.txt:
* UseJSC.cmake:
* bindings/js/JSIntentConstructor.cpp: Added.
(WebCore):
(WebCore::JSIntentConstructor::constructJSIntent):

Source/WebKit/efl:

* WebCoreSupport/FrameLoaderClientEfl.cpp: Add missing header include.
* ewk/ewk_intent_private.h: Ditto.
* ewk/ewk_intent_request.cpp:
(ewk_intent_request_new): Do not PassRefPtr after it becomes 0.

LayoutTests:

Move webintents test cases to test expectations until the needed
features are implemented and Web Intents are enabled by default
for EFL port.

* platform/efl/Skipped:
* platform/efl/test_expectations.txt:

Canonical link: https://commits.webkit.org/104523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117624 268f45cc-cd09-0410-ab3c-d52691b4dbfc